570/lab7/code/y.output
State 3 conflicts: 2 reduce/reduce
State 18 conflicts: 3 shift/reduce
State 21 conflicts: 3 shift/reduce
State 23 conflicts: 3 shift/reduce


Grammar

    0 $accept: s $end

    1 s: a
    2  | b

    3 a: t ZERO a
    4  | t ZERO t

    5 t: ZERO t ONE
    6  | ONE t ZERO
    7  | EPSILON

    8 b: u ONE b
    9  | u ONE u

   10 u: ZERO u ONE
   11  | ONE u ZERO
   12  | u u
   13  | EPSILON


Terminals, with rules where they appear

$end (0) 0
error (256)
ONE (258) 5 6 8 9 10 11
ZERO (259) 3 4 5 6 10 11
EPSILON (260) 7 13


Nonterminals, with rules where they appear

$accept (6)
    on left: 0
s (7)
    on left: 1 2, on right: 0
a (8)
    on left: 3 4, on right: 1 3
t (9)
    on left: 5 6 7, on right: 3 4 5 6
b (10)
    on left: 8 9, on right: 2 8
u (11)
    on left: 10 11 12 13, on right: 8 9 10 11 12


state 0

    0 $accept: . s $end

    ONE      shift, and go to state 1
    ZERO     shift, and go to state 2
    EPSILON  shift, and go to state 3

    s  go to state 4
    a  go to state 5
    t  go to state 6
    b  go to state 7
    u  go to state 8


state 1

    6 t: ONE . t ZERO
   11 u: ONE . u ZERO

    ONE      shift, and go to state 1
    ZERO     shift, and go to state 2
    EPSILON  shift, and go to state 3

    t  go to state 9
    u  go to state 10


state 2

    5 t: ZERO . t ONE
   10 u: ZERO . u ONE

    ONE      shift, and go to state 1
    ZERO     shift, and go to state 2
    EPSILON  shift, and go to state 3

    t  go to state 11
    u  go to state 12


state 3

    7 t: EPSILON .
   13 u: EPSILON .

    ONE       reduce using rule 7 (t)
    ONE       [reduce using rule 13 (u)]
    ZERO      reduce using rule 7 (t)
    ZERO      [reduce using rule 13 (u)]
    EPSILON   reduce using rule 13 (u)
    $default  reduce using rule 7 (t)


state 4

    0 $accept: s . $end

    $end  shift, and go to state 13


state 5

    1 s: a .

    $default  reduce using rule 1 (s)


state 6

    3 a: t . ZERO a
    4  | t . ZERO t

    ZERO  shift, and go to state 14


state 7

    2 s: b .

    $default  reduce using rule 2 (s)


state 8

    8 b: u . ONE b
    9  | u . ONE u
   12 u: u . u

    ONE      shift, and go to state 15
    ZERO     shift, and go to state 16
    EPSILON  shift, and go to state 17

    u  go to state 18


state 9

    6 t: ONE t . ZERO

    ZERO  shift, and go to state 19


state 10

   11 u: ONE u . ZERO
   12  | u . u

    ONE      shift, and go to state 20
    ZERO     shift, and go to state 21
    EPSILON  shift, and go to state 17

    u  go to state 18


state 11

    5 t: ZERO t . ONE

    ONE  shift, and go to state 22


state 12

   10 u: ZERO u . ONE
   12  | u . u

    ONE      shift, and go to state 23
    ZERO     shift, and go to state 16
    EPSILON  shift, and go to state 17

    u  go to state 18


state 13

    0 $accept: s $end .

    $default  accept


state 14

    3 a: t ZERO . a
    4  | t ZERO . t

    ONE      shift, and go to state 24
    ZERO     shift, and go to state 25
    EPSILON  shift, and go to state 26

    a  go to state 27
    t  go to state 28


state 15

    8 b: u ONE . b
    9  | u ONE . u
   11 u: ONE . u ZERO

    ONE      shift, and go to state 20
    ZERO     shift, and go to state 16
    EPSILON  shift, and go to state 17

    b  go to state 29
    u  go to state 30


state 16

   10 u: ZERO . u ONE

    ONE      shift, and go to state 20
    ZERO     shift, and go to state 16
    EPSILON  shift, and go to state 17

    u  go to state 12


state 17

   13 u: EPSILON .

    $default  reduce using rule 13 (u)


state 18

   12 u: u . u
   12  | u u .

    ONE      shift, and go to state 20
    ZERO     shift, and go to state 16
    EPSILON  shift, and go to state 17

    ONE       [reduce using rule 12 (u)]
    ZERO      [reduce using rule 12 (u)]
    EPSILON   [reduce using rule 12 (u)]
    $default  reduce using rule 12 (u)

    u  go to state 18


state 19

    6 t: ONE t ZERO .

    $default  reduce using rule 6 (t)


state 20

   11 u: ONE . u ZERO

    ONE      shift, and go to state 20
    ZERO     shift, and go to state 16
    EPSILON  shift, and go to state 17

    u  go to state 10


state 21

   10 u: ZERO . u ONE
   11  | ONE u ZERO .

    ONE      shift, and go to state 20
    ZERO     shift, and go to state 16
    EPSILON  shift, and go to state 17

    ONE       [reduce using rule 11 (u)]
    ZERO      [reduce using rule 11 (u)]
    EPSILON   [reduce using rule 11 (u)]
    $default  reduce using rule 11 (u)

    u  go to state 12


state 22

    5 t: ZERO t ONE .

    $default  reduce using rule 5 (t)


state 23

   10 u: ZERO u ONE .
   11  | ONE . u ZERO

    ONE      shift, and go to state 20
    ZERO     shift, and go to state 16
    EPSILON  shift, and go to state 17

    ONE       [reduce using rule 10 (u)]
    ZERO      [reduce using rule 10 (u)]
    EPSILON   [reduce using rule 10 (u)]
    $default  reduce using rule 10 (u)

    u  go to state 10


state 24

    6 t: ONE . t ZERO

    ONE      shift, and go to state 24
    ZERO     shift, and go to state 25
    EPSILON  shift, and go to state 26

    t  go to state 9


state 25

    5 t: ZERO . t ONE

    ONE      shift, and go to state 24
    ZERO     shift, and go to state 25
    EPSILON  shift, and go to state 26

    t  go to state 11


state 26

    7 t: EPSILON .

    $default  reduce using rule 7 (t)


state 27

    3 a: t ZERO a .

    $default  reduce using rule 3 (a)


state 28

    3 a: t . ZERO a
    4  | t . ZERO t
    4  | t ZERO t .

    ZERO  shift, and go to state 14

    $default  reduce using rule 4 (a)


state 29

    8 b: u ONE b .

    $default  reduce using rule 8 (b)


state 30

    8 b: u . ONE b
    9  | u . ONE u
    9  | u ONE u .
   11 u: ONE u . ZERO
   12  | u . u

    ONE      shift, and go to state 15
    ZERO     shift, and go to state 21
    EPSILON  shift, and go to state 17

    $default  reduce using rule 9 (b)

    u  go to state 18
